[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/lesserBody.gd" type="Script" id=1]
[ext_resource path="res://scripts/lesserCollisionShape.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape" id=1]

points = PoolVector3Array(  )

[node name="lesserBody" type="StaticBody" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
script = ExtResource( 1 )

[node name="lesserMesh" type="MeshInstance" parent="." index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = null
skeleton = NodePath("..")

[node name="lesserCollisionShape" type="CollisionShape" parent="." index="1"]

shape = SubResource( 1 )
disabled = false
script = ExtResource( 2 )


